Fixing doc
